# This file is part of rdma-core. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/rdma-core/master/COPYRIGHT. No part of rdma-core, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of rdma-core. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/rdma-core/master/COPYRIGHT.


[package]
name = "rdma-core-sys"
description = "rdma-core-sys FFI bindings"
keywords = ["rdma-core", "RDMA", "RoCE", "InfiniBand", "verbs"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
categories = ["external-ffi-bindings"]
homepage = "https://github.com/lemonrock/rdma-core"
repository = "https://github.com/lemonrock/rdma-core.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "src/**/*.c", "src/**/*.h", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile.conf.d/**/*"]
build = "src/build.rs"
links = "rdma-core"
readme = "README.md"
publish = true
version = "0.1.7"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
