# This file is part of rdma-core. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/rdma-core/master/COPYRIGHT. No part of rdma-core, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of rdma-core. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/rdma-core/master/COPYRIGHT.


[package]
name = "rdma-core"
description = "rdma-core mid-level bindings"
keywords = ["rdma-core", "RDMA", "Infiniband", "RoCE"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/rdma-core/blob/master/README.md"
homepage = "https://github.com/lemonrock/rdma-core"
repository = "https://github.com/lemonrock/rdma-core.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"

[dependencies]
arrayvec = "0.3.21"
bitflags = "0.8"
errno = "0.2"
libc = "0.2"
rdma-core-sys = { path = "../rdma-core-sys", version = "0.0.0" }
rust-extra = "0.0.13"
syscall-alt = "0.0.14"
