# This file is part of rdma-core. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/rdma-core/master/COPYRIGHT. No part of rdma-core, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of rdma-core. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/rdma-core/master/COPYRIGHT.


[package]
name = "ucx"
description = "ucx mid-level bindings"
keywords = ["UCX", "RDMA", "InfiniBand", "RoCE"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/ucx/blob/master/README.md"
homepage = "https://github.com/lemonrock/ucx"
repository = "https://github.com/lemonrock/ucx.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
version = "0.0.0"

[dependencies]
cfg-if = "0.1"
errno = "0.2"
libc = "0.2"
libc-extra = " 0.0.14"
quick-error = "1.1"
ucx-sys = { path = "../ucx-sys", version = "0.0.1" }
rust-extra = "0.0.13"
